<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false" >Alexandria</string>

    <!-- Fragment titles -->
    <string name="title_books">List of Books</string>
    <string name="title_scan">Scan/Add a Book</string>
    <string name="title_barcode">Barcode Scanner</string>
    <string name="title_book_detail">Book Detail</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About this App</string>

    <!-- Add or Scan Texts -->
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>
    <string name="barcode_scan_retry">Try Again</string>

    <string name="authors">Authors</string>
    <string name="categories">Categories</string>

    <string name="ok_button">Next</string>
    <string name="delete">Delete Book</string>
    <string name="cancel_button">Cancel</string>

    <string name="loading">Loading...</string>
    <string name="no_internet_connection">Impossible to get book, you don\'t have Internet connection.</string>
    <string name="not_found">No Book Found</string>
    <string name="request_error">Request Error</string>
    <string name="search">Search</string>


    <string name="pref_startScreen">Select Start Screen</string>
    <string name="pref_startScreen_default" translatable="false">0</string>

    <string name="action_share">Share</string>
    <string name="share_text">A must read book: </string>

    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program.
    Now Alexandria App has full support to read ISBN barcode using phone camera too!!!</string>
    <string name="developed_by">Developed by Sascha Jaschke and Udacity</string>

    <string name="enter_isbn">Enter ISBN</string>
    <string name="scan_isbn_barcode">Scan ISBN Barcode</string>
    <string name="search_hint">Search...</string>
</resources>
