<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.jaschke.alexandria.AddBookFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/eancontainer"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/eantextinputlayou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:saveEnabled="false"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/input_hint" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:drawableLeft="@drawable/ic_action_barcode"
            android:drawablePadding="5dp"
            android:textSize="18sp"
            android:text="@string/scan_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/loading"
        android:textIsSelectable="false"
        android:layout_gravity="center_horizontal"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/eancontainer"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eancontainer"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/bookCover"
                android:src="@drawable/cover_missing"
                android:contentDescription="@string/book_cover"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookTitle"
                    android:textSize="@dimen/head_line"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    android:text="Book Title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookSubTitle"
                    android:layout_marginTop="5dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:text="Subtitle"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/authors"
                    android:textSize="@dimen/small_fontsize"
                    android:layout_marginTop="10dp"
                    android:text="Authors"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/categories"
                    android:textSize="@dimen/small_fontsize"
                    android:layout_marginTop="5dp"
                    android:text="Categories"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/cancel_button"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delete_button"
            android:drawableLeft="@drawable/ic_action_discard" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/ok_button"
            android:layout_weight="1"
            android:id="@+id/save_button"
            android:drawableLeft="@drawable/ic_action_accept"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="bottom"
            />

    </LinearLayout>

</RelativeLayout>
